# pyrsist

./: README.md
pyrsist/: main.py  pyproject.toml
pyrsist/src/pyrsist/: __init__.py
pyrsist/tests/scripts/: gift_tier.py
src/pyrsist/: __init__.py
test/: test_idvar.py
tests/: test_idvar.py
