[project]
name = "pyrsist"
version = "0.1.0"
description = "Persist global variables within python scripts"
readme = "README.md"
authors = [
    { name = "“Janukan", email = "“sivajeya@ualberta.ca”" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
]

[project.scripts]
pyrsist = "pyrsist:pyrsist"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
